fix: overflow-x removal

--- a/style.css
+++ b/style.css
@@ -16,7 +16,9 @@ svg{ 	position:absolute;
     top:0;
     bottom:0;
     left:0;
-    right:0;}
+    right:0;
+    overflow-x: hidden;
+}
 
 #right_sec{
     position: absolute;
